Delete new- reference

--- a/_element.html
+++ b/_element.html
@@ -1,6 +1,6 @@
 <link rel="import" href="../polymer/polymer-element.html">
 
-<dom-module id="new-paper-datatable-api">
+<dom-module id="paper-datatable-api">
   <template>
     <style>
       :host {
@@ -12,21 +12,21 @@
 
   <script>
     /**
-     * `new-paper-datatable-api`
-     * 
+     * `paper-datatable-api`
+     *
      *
      * @customElement
      * @polymer
      * @demo demo/index.html
      */
     class NewPaperDatatableApi extends Polymer.Element {
-      static get is() { return 'new-paper-datatable-api'; }
+      static get is() { return 'paper-datatable-api'; }
       static get properties() {
         return {
           prop1: {
             type: String,
-            value: 'new-paper-datatable-api'
-          }
+            value: 'paper-datatable-api',
+          },
         };
       }
     }
