--- a/demo/index.html
+++ b/demo/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=yes">
 
-  <title>new-paper-datatable-api demo</title>
+  <title>paper-datatable-api demo</title>
 
   <script src="../../webcomponentsjs/webcomponents-loader.js"></script>
 
@@ -24,7 +24,7 @@
 
 <body>
   <div class="vertical-section-container centered">
-    <h3>Basic new-paper-datatable-api demo</h3>
+    <h3>Basic paper-datatable-api demo</h3>
     <demo-snippet>
       <template>
         <dom-bind>
