--- a/test/_element_test.html
+++ b/test/_element_test.html
@@ -1,52 +1,53 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=yes">
 
-    <title>new-paper-datatable-api test</title>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=yes">
 
-    <script src="../../webcomponentsjs/webcomponents-loader.js"></script>
-    <script src="../../web-component-tester/browser.js"></script>
+  <title>paper-datatable-api test</title>
 
-    <link rel="import" href="../new-paper-datatable-api.html">
-  </head>
-  <body>
+  <script src="../../webcomponentsjs/webcomponents-loader.js"></script>
+  <script src="../../web-component-tester/browser.js"></script>
 
-    <test-fixture id="BasicTestFixture">
-      <template>
-        <new-paper-datatable-api></new-paper-datatable-api>
-      </template>
-    </test-fixture>
+  <link rel="import" href="../paper-datatable-api.html">
+</head>
 
-    <test-fixture id="ChangedPropertyTestFixture">
-      <template>
-        <new-paper-datatable-api prop1="new-prop1"></new-paper-datatable-api>
-      </template>
-    </test-fixture>
+<body>
 
-    <script>
-      suite('new-paper-datatable-api', () => {
+  <test-fixture id="BasicTestFixture">
+    <template>
+      <paper-datatable-api></paper-datatable-api>
+    </template>
+  </test-fixture>
 
-        test('instantiating the element with default properties works', () => {
-          const element = fixture('BasicTestFixture');
-          assert.equal(element.prop1, 'new-paper-datatable-api');
-          const elementShadowRoot = element.shadowRoot;
-          const elementHeader = elementShadowRoot.querySelector('h2');
-          assert.equal(elementHeader.innerHTML, 'Hello new-paper-datatable-api!');
-        });
+  <test-fixture id="ChangedPropertyTestFixture">
+    <template>
+      <paper-datatable-api prop1="prop1"></paper-datatable-api>
+    </template>
+  </test-fixture>
 
-        test('setting a property on the element works', () => {
-          // Create a test fixture
-          const element = fixture('ChangedPropertyTestFixture');
-          assert.equal(element.prop1, 'new-prop1');
-          const elementShadowRoot = element.shadowRoot;
-          const elementHeader = elementShadowRoot.querySelector('h2');
-          assert.equal(elementHeader.innerHTML, 'Hello new-prop1!');
-        });
-
+  <script>
+    suite('paper-datatable-api', () => {
+      test('instantiating the element with default properties works', () => {
+        const element = fixture('BasicTestFixture');
+        assert.equal(element.prop1, 'paper-datatable-api');
+        const elementShadowRoot = element.shadowRoot;
+        const elementHeader = elementShadowRoot.querySelector('h2');
+        assert.equal(elementHeader.innerHTML, 'Hello paper-datatable-api!');
       });
-    </script>
 
-  </body>
+      test('setting a property on the element works', () => {
+        // Create a test fixture
+        const element = fixture('ChangedPropertyTestFixture');
+        assert.equal(element.prop1, 'prop1');
+        const elementShadowRoot = element.shadowRoot;
+        const elementHeader = elementShadowRoot.querySelector('h2');
+        assert.equal(elementHeader.innerHTML, 'Hello prop1!');
+      });
+    });
+  </script>
+
+</body>
+
 </html>
