Fix syntax error on selectedChoices property

--- a/helpers/pda-header-with-choices-and-sort.html
+++ b/helpers/pda-header-with-choices-and-sort.html
@@ -45,7 +45,7 @@
             }
           </style>
           <pda-header-with-sort direction="{{direction}}">
-            <pda-header-with-choices selected-choices="{{selected-choices}}" choices="[[choices]]">
+            <pda-header-with-choices selected-choices="{{selectedChoices}}" choices="[[choices]]">
               [[header]]
             </pda-header-with-choices>
           </pda-header-with-sort>
