Fix when we have 0 in value

--- a/paper-datatable-api.html
+++ b/paper-datatable-api.html
@@ -257,7 +257,7 @@
           const splittedProperties = columnProperty.split('.');
           if (splittedProperties.length > 1) {
             return splittedProperties.reduce((prevRow, property) => {
-              if (typeof prevRow === 'string' && rowData[prevRow] && rowData[prevRow][property]) {
+              if (typeof prevRow === 'string' && rowData[prevRow] !== undefined && rowData[prevRow][property] !== undefined) {
                 return rowData[prevRow][property];
               }
 
