add a mixin for arrow color

--- a/helpers/pda-header-with-sort.html
+++ b/helpers/pda-header-with-sort.html
@@ -28,12 +28,12 @@
             }
 
             .desc {
-              color: var(--paper-light-green-600);
+              color: var(--paper-datatable-api-arrow-color, var(--paper-light-green-600));
               transform: rotate(0deg);
             }
 
             .asc {
-              color: var(--paper-light-green-600);
+              color: var(--paper-datatable-api-arrow-color, var(--paper-light-green-600));
               transform: rotate(180deg);
             }
           </style>
