add a check in case  selectedData is not set but selectKey is to avoid table crash

--- a/paper-datatable-api.html
+++ b/paper-datatable-api.html
@@ -208,7 +208,7 @@
             if (this.selectedKey) {
               const selectable = this._extractData(rowData, this.selectedKey);
               trLocal.dataset.selectable = selectable;
-              if (this.selectedData.indexOf(selectable) !== -1) {
+              if (this.selectedData && this.selectedData.indexOf(selectable) !== -1) {
                 trLocal.classList.add('selected');
               }
             }
