--- a/helpers/pda-header-with-sort.html
+++ b/helpers/pda-header-with-sort.html
@@ -1,5 +1,8 @@
 <link rel="import" href="../../polymer/polymer-element.html">
 <link rel="import" href="../../iron-flex-layout/iron-flex-layout-classes.html">
+<link rel="import" href="../../paper-tooltip/paper-tooltip.html">
+<link rel="import" href="../../app-localize-behavior/app-localize-behavior.html">
+
 
 <dom-module id="pda-header-with-sort">
   <script>
@@ -10,12 +13,15 @@
      * @customElement
      * @polymer
      * @demo demo/index.html
-     */
-    class PdaHeaderWithSort extends Polymer.Element {
+
+    * @appliesMixin Polymer.AppLocalizeBehavior
+*/
+    class PdaHeaderWithSort extends Polymer.mixinBehaviors(
+      [Polymer.AppLocalizeBehavior], Polymer.Element
+    ) {
       static get is() {
         return 'pda-header-with-sort';
       }
-
       static get template() {
         return Polymer.html`
           <style include="iron-flex iron-flex-alignment">
@@ -42,7 +48,8 @@
               <slot></slot>
             </div>
             <slot name="actions"></slot>
-            <paper-icon-button icon="arrow-downward" on-tap="_handleSort" class$="[[direction]]"></paper-icon-button>
+            <paper-icon-button id="sortBtn" icon="arrow-downward" on-tap="_handleSort" class$="[[direction]]"></paper-icon-button>
+            <paper-tooltip for="sortBtn">[[_getTooltipText(localize, direction)]]<paper-tooltip>
           </div>
       `;
       }
@@ -54,7 +61,15 @@
             notify: true,
             value: '',
           },
+          language: {
+            type: String,
+            value: 'fr'
+          },
         };
+      }
+
+      attached() {
+        this.loadResources(this.resolveUrl('../locales.json'));
       }
 
       _handleSort() {
@@ -69,6 +84,15 @@
             this.direction = '';
             break;
         }
+      }
+
+      _getTooltipText(localize, direction) {
+        if (direction === 'asc') {
+          return localize('pda.header.sort.cancel');
+        } else if (direction === 'desc') {
+          return localize('pda.header.sort.AZ');
+        }
+        return localize('pda.header.sort.ZA');
       }
     }
 
