--- a/helpers/pda-header-with-filter-and-sort.html
+++ b/helpers/pda-header-with-filter-and-sort.html
@@ -2,6 +2,7 @@
 <link rel="import" href="../../paper-input/paper-input.html">
 <link rel="import" href="../../paper-icon-button/paper-icon-button.html">
 <link rel="import" href="../../iron-flex-layout/iron-flex-layout-classes.html">
+<link rel="import" href="../../app-localize-behavior/app-localize-behavior.html">
 <link rel="import" href="./pda-header-with-sort.html">
 
 <dom-module id="pda-header-with-filter-and-sort">
@@ -13,8 +14,12 @@
      * @customElement
      * @polymer
      * @demo demo/index.html
+
+     * @appliesMixin Polymer.AppLocalizeBehavior
      */
-    class PdaHeaderWithFilterAndSort extends Polymer.Element {
+    class PdaHeaderWithFilterAndSort extends Polymer.mixinBehaviors(
+      [Polymer.AppLocalizeBehavior], Polymer.Element
+    ) {
       static get is() {
         return 'pda-header-with-filter-and-sort';
       }
@@ -71,7 +76,8 @@
                   <div class="header" on-tap="_toggleActive">
                     [[header]]
                   </div>
-                  <paper-icon-button slot="actions" icon="search" on-tap="_toggleActive"></paper-icon-button>
+                  <paper-icon-button id="searchBtn" slot="actions" icon="search" on-tap="_toggleActive"></paper-icon-button>
+                  <paper-tooltip for="searchBtn" slot="actions">[[localize('search')]]</paper-tooltip>
                 </pda-header-with-sort>
               </template>
             </dom-if>
@@ -93,6 +99,35 @@
           filterValue: {
             type: String,
             notify: true,
+          },
+          language: {
+            type: String,
+            value: 'fr'
+          },
+          resources: {
+            notify: true,
+            value() {
+              return {
+                en: {
+                  search: 'Search',
+                },
+                'en-en': {
+                  search: 'Search',
+                },
+                'en-US': {
+                  search: 'Search',
+                },
+                'en-us': {
+                  search: 'Search',
+                },
+                fr: {
+                  search: 'Rechercher',
+                },
+                'fr-fr': {
+                  search: 'Rechercher',
+                },
+              };
+            },
           },
         };
       }
