--- a/helpers/pda-header-with-filter.html
+++ b/helpers/pda-header-with-filter.html
@@ -64,7 +64,8 @@
             <dom-if if="[[active]]">
               <template>
                 <paper-input no-label-float placeholder="[[header]]" value="{{filterValue}}">
-                  <paper-icon-button icon="clear" slot="suffix" on-tap="_toggleActive"></paper-icon-button>
+                  <paper-icon-button id="clearBtn" icon="clear" slot="suffix" on-tap="_toggleActive"></paper-icon-button>
+                  <paper-tooltip for="clearBtn" id="searchBtn" slot="suffix">[[localize('clear')]]</paper-tooltip>
                 </paper-input>
               </template>
             </dom-if>
@@ -73,7 +74,7 @@
                 <div class="layout horizontal center" on-tap="_toggleActive">
                   <div class="flex header">[[header]]</div>
                   <paper-icon-button id="searchBtn" slot="actions" icon="search"></paper-icon-button>
-                  <paper-tooltip id="searchBtn" slot="actions">[[localize('search')]]</paper-tooltip>
+                  <paper-tooltip for="searchBtn" slot="actions">[[localize('search')]]</paper-tooltip>
                 </div>
               </template>
             </dom-if>
@@ -106,21 +107,27 @@
               return {
                 en: {
                   search: 'Search',
+                  clear: 'Clear',
                 },
                 'en-en': {
                   search: 'Search',
+                  clear: 'Clear',
                 },
                 'en-US': {
                   search: 'Search',
+                  clear: 'Clear',
                 },
                 'en-us': {
                   search: 'Search',
+                  clear: 'Clear',
                 },
                 fr: {
                   search: 'Rechercher',
+                  clear: 'Effacer',
                 },
                 'fr-fr': {
                   search: 'Rechercher',
+                  clear: 'Effacer',
                 },
               };
             },
